fix: read bucket and object from srcOriginal

--- a/example/src/index.html
+++ b/example/src/index.html
@@ -15,7 +15,7 @@
   <body>
     <h1>
       Welcome to Express.js application created by
-      <a href="https://serverlesscloud.cn/">Serververless Framework.</a>
+      <a href="https://serverlesscloud.cn/">Serverless Framework.</a>
     </h1>
   </body>
 </html>
